UP lista ginastica -atualização

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -338,113 +338,109 @@
     </div>
 </section>
 
-@*GINASTICA*@
+@*TABLE GINASTICA*@
 <section id="ginastica" class="reveal">
     <div class="py-5 fw-bolder text-center">
         <h2 class="tt2">
             Ginastica
         </h2>
     </div>
-    <div class="container p-3">
-        <table id="gym" class="table table-hover">
-            <thead style="background-color: mediumpurple; color: white;">
+    <div class="container table-responsive rounded-2 bg-white w-75  ">
+        <table id="gym" class="table table-striped table-hover display">
+            <thead style="background-color: purple; color: white;" ead>
                 <tr>
-                    <th>Data</th>
-                    <th>Nome</th>
+                    <th style="background-color: mediumpurple; color: white;">Data</th>
+                    <th style="background-color: mediumpurple; color: white;">Nome</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>01/out</td>
-                    <td>Marco Tulio</td>
-                </tr>
-                <tr>
-                    <td>02/out</td>
+                    <td>01/10/2025</td>
                     <td>Maria Eduarda</td>
                 </tr>
                 <tr>
-                    <td>03/out</td>
+                    <td>02/10/2025</td>
                     <td>Maria Laura</td>
                 </tr>
                 <tr>
-                    <td>06/out</td>
+                    <td>03/10/2025</td>
                     <td>Natã</td>
                 </tr>
                 <tr>
-                    <td>07/out</td>
+                    <td>06/10/2025</td>
                     <td>Paula</td>
                 </tr>
                 <tr>
-                    <td>08/out</td>
+                    <td>07/10/2025</td>
                     <td>Pedro Ivo</td>
                 </tr>
                 <tr>
-                    <td>09/out</td>
-                    <td>Quintiliana (Tininha)</td>
+                    <td>08/10/2025</td>
+                    <td>Tininha</td>
                 </tr>
                 <tr>
-                    <td>10/out</td>
+                    <td>09/10/2025</td>
                     <td>Tatiane Franco</td>
                 </tr>
                 <tr>
-                    <td>13/out</td>
+                    <td>10/10/2025</td>
                     <td>Thalyta</td>
                 </tr>
                 <tr>
-                    <td>14/out</td>
+                    <td>13/10/2025</td>
                     <td>Thiago Soares</td>
                 </tr>
                 <tr>
-                    <td>15/out</td>
+                    <td>14/10/2025</td>
                     <td>Victor César</td>
                 </tr>
                 <tr>
-                    <td>16/out</td>
+                    <td>15/10/2025</td>
                     <td>Adila Ribeiro</td>
                 </tr>
                 <tr>
-                    <td>20/out</td>
+                    <td>16/10/2025</td>
                     <td>Alana</td>
                 </tr>
                 <tr>
-                    <td>21/out</td>
+                    <td>17/10/2025</td>
                     <td>Aline Moreira</td>
                 </tr>
                 <tr>
-                    <td>22/out</td>
+                    <td>20/10/2025</td>
                     <td>Andreza</td>
                 </tr>
                 <tr>
-                    <td>22/out</td>
-                    <td>Arthur Reis</td>
-                </tr>
-                <tr>
-                    <td>23/out</td>
+                    <td>21/10/2025</td>
                     <td>Berenice Longuinhos</td>
                 </tr>
                 <tr>
-                    <td>24/out</td>
-                    <td>Camila Barbosa</td>
-                </tr>
-                <tr>
-                    <td>27/out</td>
+                    <td>22/10/2025</td>
                     <td>Crimacia Oliveira</td>
                 </tr>
                 <tr>
-                    <td>28/out</td>
+                    <td>23/10/2025</td>
                     <td>Danielle Stefânia</td>
                 </tr>
                 <tr>
-                    <td>29/out</td>
+                    <td>24/10/2025</td>
                     <td>Dayse Mara</td>
                 </tr>
                 <tr>
-                    <td>30/out</td>
+                    <td>28/10/2025</td>
                     <td>Dayse Xavier</td>
                 </tr>
                 <tr>
-                    <td>31/out</td>
+                    <td>29/10/2025</td>
                     <td>Deivid Rodrigues</td>
+                </tr>
+                <tr>
+                    <td>30/10/2025</td>
+                    <td>Fagner Miguel</td>
+                </tr>
+                <tr>
+                    <td>31/10/2025</td>
+                    <td>Felipe</td>
                 </tr>
             </tbody>
         </table>
