UP section institucional -melhoria de conteudo -responsividade

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -463,7 +463,7 @@
                 </p>
             </div>
             <div class="row g-4">
-                <div class="col-xl-4">
+                <div class="col-md-4">
                     <div class="p-5">
                         <h5 class="text-center">
                             TOM DE VOZ
@@ -481,7 +481,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-md-4">
                     <div class="p-5">
                         <h5 class="text-center">
                             AMBIENTE
@@ -498,7 +498,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-md-4">
                     <div class="p-5">
                         <h5 class="text-center">
                             LOCAL DE TRABALHO
@@ -519,6 +519,7 @@
         </div>
     </div>
 </section>
+
 
 @*ALMOÇO*@
 <section id="horario" class="reveal">
