UP tabela de almoco -atualizada

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -520,122 +520,120 @@
     </div>
 </section>
 
-
-@*ALMOÇO*@
+@*TABLE ALMOÇO*@
 <section id="horario" class="reveal">
     <div class="py-5 text-center">
         <h2 class="tt">
             Horario de Almoço
         </h2>
     </div>
-    <div class="container">
-        <div class="table-responsive">
-            <div class="pt-3">
-                <table class="hours table table-hover">
-                    <thead style="background-color: purple; color: white;">
-                        <tr>
-                            <th colspan="5" class="text-center">COZINHA</th>
-                        </tr>
-                        <tr>
-                            <th>11h30min</th>
-                            <th>12h00min</th>
-                            <th>12h30min</th>
-                            <th>13h00min</th>
-                            <th>13h30min</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Gerald</td>
-                            <td>Berenice</td>
-                            <td>Camila</td>
-                            <td>Fagner</td>
-                            <td>Tati</td>
-                        </tr>
-                        <tr>
-                            <td>Felipe</td>
-                            <td>Tininha</td>
-                            <td>Andreza</td>
-                            <td>Deivid</td>
-                            <td>Jaqueline</td>
-                        </tr>
-                        <tr>
-                            <td>Marco Tulio</td>
-                            <td>Crimacia</td>
-                            <td>Luana</td>
-                            <td>Pedro</td>
-                            <td>Dani</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Karolina (E-commerce)</td>
-                            <td>Adila</td>
-                            <td>Victor</td>
-                            <td>Lorrayne</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Nancy</td>
-                            <td>Duda (CT)</td>
-                            <td>Diego</td>
-                            <td>Dayse Xavier</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="pt-5">
-                <table class="hours table table-hover py-5">
-                    <thead style="background-color: purple; color: white;">
-                        <tr>
-                            <th colspan="5" class="text-center">REFEITÓRIO 1º PISO</th>
-                        </tr>
-                        <tr>
-                            <th>12h00</th>
-                            <th>12h30</th>
-                            <th>13h00min</th>
-                            <th>13h15min</th>
-                            <th>13h30min</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Karoline (Jurídico)</td>
-                            <td>João</td>
-                            <td>Jade</td>
-                            <td>Luiz (TI)</td>
-                            <td>Dayse Mara</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Camila(MKT)</td>
-                            <td>Thiago (CT)</td>
-                            <td></td>
-                            <td>Natã</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Livia</td>
-                            <td>Luiz (MKT)</td>
-                            <td></td>
-                            <td>Paula</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Thalyta</td>
-                            <td>Izabela (Fiscal)</td>
-                            <td></td>
-                            <td>Alana</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Isadora Mirella</td>
-                            <td>Aline</td>
-                            <td></td>
-                            <td>Arthur</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+    <div class="container table-responsive rounded-2 bg-white w-75  ">
+        <div class="pt-3">
+            <table class="hours table table-striped table-hover display">
+                <thead style="background-color: purple; color: white;" ead>
+                    <tr>
+                        <th style="background-color: purple; color: white;" colspan="5" class="text-center">COZINHA</th>
+                    </tr>
+                    <tr>
+                        <th style="background-color: purple; color: white;">11h30min</th>
+                        <th style="background-color: purple; color: white;">12h00min</th>
+                        <th style="background-color: purple; color: white;">12h30min</th>
+                        <th style="background-color: purple; color: white;">13h00min</th>
+                        <th style="background-color: purple; color: white;">13h30min</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Gerald</td>
+                        <td>Berenice</td>
+                        <td>Nancy</td>
+                        <td>Fagner</td>
+                        <td>Tati</td>
+                    </tr>
+                    <tr>
+                        <td>Felipe</td>
+                        <td>Tininha</td>
+                        <td>Andreza</td>
+                        <td>Deivid</td>
+                        <td>Jaqueline</td>
+                    </tr>
+                    <tr>
+                        <td>Marco Tulio</td>
+                        <td>Crimarcia</td>
+                        <td>Luana</td>
+                        <td>Pedro</td>
+                        <td>Dani</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Karolina (E-commerce)</td>
+                        <td>Adila</td>
+                        <td>Victor</td>
+                        <td>Lorrayne</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td>Dayse Xavier</td>
+                        <td>Diego</td>
+                        <td>Natã</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        @*TABLE PISO 1*@
+        <div class="pt-5">
+            <table class="hours table table-striped table-hover py-5 display">
+                <thead style="background-color: purple; color: white;" ead>
+                    <tr>
+                        <th style="background-color: purple; color: white;" colspan="5" class="text-center">REFEITÓRIO 1º PISO</th>
+                    </tr>
+                    <tr>
+                        <th style="background-color: purple; color: white;">12h00</th>
+                        <th style="background-color: purple; color: white;">12h30</th>
+                        <th style="background-color: purple; color: white;">13h00min</th>
+                        <th style="background-color: purple; color: white;">13h15min</th>
+                        <th style="background-color: purple; color: white;">13h30min</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Karoline (Jurídico)</td>
+                        <td>João</td>
+                        <td>Thiago (CT)</td>
+                        <td>Luiz (TI)</td>
+                        <td>Dayse Mara</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Camila(MKT)</td>
+                        <td>Luiz (MKT)</td>
+                        <td></td>
+                        <td>Paula</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Livia</td>
+                        <td>Izabela(Fiacal)</td>
+                        <td></td>
+                        <td>Alana</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Thalyta</td>
+                        <td>Aline</td>
+                        <td></td>
+                        <td>Arthur</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Isadora Mirella</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
