UP lancamentos -melhoria conteudo -responsividade -class

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -647,7 +647,7 @@
         <div class="row pt-5 g-4">
             <div class="col-md-6 d-flex align-items-end">
                 <div class=" text-center w-100">
-                    <img src="~/Content/img/ricinoCorte.png" class="img-fluid mx-auto" style="max-width: 100%; max-height: 332px;" alt="">
+                    <img src="~/Content/img/ricinoCorte.png" class="img-fluid efeito-lan mx-auto" style="max-width: 100%; max-height: 332px;" alt="">
                     <div class="card-body d-flex flex-column justify-content-center">
                         <h5 class="card-title text-white">Shampoo de Rícino</h5>
                         @*<a href="https://loja.softhair.com.br/" target="_blank" class="btn btn-light rounded-pill mt-auto">Veja Mais</a>*@
@@ -657,7 +657,7 @@
 
             <div class="col-md-6 d-flex align-items-end">
                 <div class="text-center w-100">
-                    <img src="~/Content/img/Tiramake.png" class="img-fluid mx-auto" style="max-width: 300px;" alt="">
+                    <img src="~/Content/img/Tiramake.png" class="img-fluid efeito-lan mx-auto" style="max-width: 300px;" alt="">
                     <div class="card-body d-flex flex-column justify-content-center">
                         <h5 class="card-title text-white">Tira Make</h5>
                         @*<a href="https://loja.softhair.com.br/sabonete-liquido-tira-manchas-soft-hair" target="_blank" class="btn btn-light rounded-pill mt-auto">Veja Mais</a>*@
