UP ramais -atualizado

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -668,7 +668,7 @@
     </div>
 </section>
 
-@*RAMAIS*@
+@*TABLE RAMAIS*@
 <section id="ramais" class="reveal">
     <div class="py-5 fw-bolder text-center">
         <h2 class="tt2">
@@ -676,14 +676,14 @@
         </h2>
     </div>
 
-    <div class="container p-3">
-        <table id="ram" class="table-hover table-bordered">
-            <thead style="background-color: mediumpurple; color: white;">
+    <div class="container table-responsive rounded-2 bg-white w-75  ">
+        <table id="ramal" class="table table-striped table-hover display">
+            <thead>
                 <tr>
-                    <th>Nome</th>
-                    <th>Ramal</th>
-                    <th>Email</th>
-                    <th>Departamento</th>
+                    <th style="background-color: mediumpurple; color: white;">Nome</th>
+                    <th style="background-color: mediumpurple; color: white;">Ramal</th>
+                    <th style="background-color: mediumpurple; color: white;">Email</th>
+                    <th style="background-color: mediumpurple; color: white;">Departamento</th>
                 </tr>
             </thead>
             <tbody>
@@ -700,26 +700,14 @@
                     <td>Recepção</td>
                 </tr>
                 <tr>
-                    <td>Maria Eduarda</td>
-                    <td>7734</td>
-                    <td>centrotecnico1@softhair.com.br</td>
-                    <td>Centro Técnico</td>
-                </tr>
-                <tr>
                     <td>Thiago Soares</td>
                     <td>7734</td>
                     <td>centrotecnico2@softhair.com.br</td>
                     <td>Centro Técnico</td>
                 </tr>
                 <tr>
-                    <td>Jade Dayanne</td>
-                    <td>7715</td>
-                    <td>promocoes3@softhair.com.br</td>
-                    <td>Merchandising</td>
-                </tr>
-                <tr>
                     <td>Livia Carvalho</td>
-                    <td>7716</td>
+                    <td>7706</td>
                     <td>promocoes@softhair.com.br</td>
                     <td>Merchandising</td>
                 </tr>
@@ -904,12 +892,6 @@
                     <td>Financeiro / Fiscal</td>
                 </tr>
                 <tr>
-                    <td>Camila Barbosa</td>
-                    <td>7732</td>
-                    <td>financeiro2@softhair.com.br</td>
-                    <td>Financeiro / Fiscal</td>
-                </tr>
-                <tr>
                     <td>Nancy</td>
                     <td>7720</td>
                     <td>financeiro5@softhair.com.br</td>
@@ -1056,7 +1038,6 @@
             </tbody>
         </table>
     </div>
-
 </section>
 
 @*REGRAS RAMAIS*@
