UP regras Ramais -responsividade -Conteudo

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -1055,7 +1055,7 @@
             </p>
         </div>
         <div class="row">
-            <div class="col-xl-4 p-5 g-4 flex-column">
+            <div class="col-md-4 p-5 g-4 flex-column">
                 <h5 class="text-center">
                     LIGAÇÕES INTERNAS
                 </h5>
@@ -1065,7 +1065,7 @@
                     <strong>Para Transferir Ligações:</strong> Pressione Flash + ramal desejado.
                 </p>
             </div>
-            <div class="col-xl-4 p-5 g-4 flex-column">
+            <div class="col-md-4 p-5 g-4 flex-column">
                 <h5 class="text-center">
                     INTERURBANAS FIXO
                 </h5>
@@ -1076,7 +1076,7 @@
                     Fixo para celular são <strong>proibidas</strong>.
                 </p>
             </div>
-            <div class="col-xl-4 p-5 g-4 flex-column">
+            <div class="col-md-4 p-5 g-4 flex-column">
                 <h5 class="text-center">
                     INTERURBANAS CELULAR
                 </h5>
@@ -1089,5 +1089,4 @@
             </div>
         </div>
     </div>
-
 </section>
